# back-blog

./: .envexemplo  README.md  pyproject.toml  requirements.txt
blog/: admin.py
blog/migrations/: 0001_initial.py  0002_animal_foto.py
blog/models/: animal.py
blog/serializers/: __init__.py  animal.py
blog/views/: __init__.py  animal.py
config/: settings.py  urls.py
scripts/: set_my_ip.py
